--- a/src/UserProfile.css
+++ b/src/UserProfile.css
@@ -1,5 +1,5 @@
 /* User profile container */
-/* .user-profile-container {
+ .user-profile-container { 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +9,7 @@
   width: 10%;
 
 
-} */
+} 
 .user-profile{
   margin-left: 25%;
   border-left: 4px solid rgba(0, 0, 0, 0);
